# django-pygwalker

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  STYLE_GUIDE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: bandit.yaml  black.yaml  coveralls.yaml  isort.yaml  mypy.yaml  pypi.yaml  pytest.yaml  radon.yaml  ruff.yaml  safety.yaml  tox.yaml
docs/: .readthedocs.yaml  django_settings.py  requirements.txt
docs/source/: about.md  about.rst  conf.py  features.md  index.md  index.rst  installation.md  installation.rst  internals.md  internals.rst  license.md  license.rst  style_guide.md  version_history.md  version_history.rst
src/djangoaddicts/pygwalker/: apps.py  forms.py  urls.py  views.py
src/djangoaddicts/pygwalker/templates/pygwalker/bs5/: list.html  list_no_component.html  pyg.html  pygwalker.html  pygwalker_dynamic.html
src/djangoaddicts/pygwalker/templates/pygwalker/bs5/partials/: file_upload.htm  footer.htm  header.htm  list_content.htm  pyg.htm  pygwalker_nav_menu.htm
tests/: __init__.py
tests/core/: settings.py  urls.py
tests/core/testapp/: apps.py  forms.py  models.py  views.py
tests/core/testapp/migrations/: 0001_initial.py
tests/core/testapp/templates/testapp/: my_custom_template.html
tests/data/: data.csv  invalid
tests/unit/: test_views.py
